# ui-cli

./: .env.example  .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOLT_REMOTE.md  PLAN_MCP.md  README.md  ROADMAP.md  USERGUIDE.md  cliff.toml  environment.yml  index.html  manifest  mkdocs.yml  pyproject.toml  sitemap.xml  ui
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml  release.yml
changelog/: index.html
commands/: index.html
commands/cloud/: index.html
commands/local/: index.html
commands/mcp/: index.html
configuration/: index.html
design/: client-groups-implementation.md  client-groups.md
docs/: README.md  api-feature-requests.md  changelog.md  configuration.md  examples.md  groups.md  index.md  iot-ip-schema.md  iot-wlan-migration.md  mcp.md  release.md
docs/commands/: cloud.md  index.md  local.md  mcp.md
docs/overrides/: home.html
examples/: index.html
getting-started/: index.html
groups/: index.html
installation/: index.html
overrides/: home.html
pages/: changelog.md  configuration.md  getting-started.md  groups.md  installation.md  troubleshooting.md
pages/commands/: index.md  local.md  mcp.md
pages/overrides/: home.html
plans/mcp-server-v2/: index.html
scripts/: mcp-server.sh  test-mcp-tools.py
search/: search_index.json
src/ui_cli/: __init__.py  client.py  config.py  groups.py  local_client.py  main.py  models.py  output.py
src/ui_cli/commands/: devices.py  groups.py  hosts.py  isp.py  mcp.py  sdwan.py  sites.py  status.py  version.py
src/ui_cli/commands/local/: __init__.py  apgroups.py  clients.py  config.py  devices.py  dpi.py  events.py  firewall.py  health.py  networks.py  portfwd.py  stats.py  utils.py  vouchers.py  wan.py  wlans.py
src/ui_mcp/: MCP_GUIDE.md  README.md  __init__.py  __main__.py  cli_runner.py  helpers.py  server.py
stylesheets/: dracula.css
tests/: conftest.py
tests/integration/: test_local_controller_api.py
tests/unit/: test_firewall_commands.py  test_groups.py  test_local_client.py
troubleshooting/: index.html
