[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ui-cli"
dynamic = ["version"]
description = "CLI utility for UniFi Site Manager and local controller APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vedanta" }
]
keywords = ["unifi", "ubiquiti", "cli", "network", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
urls = { Homepage = "https://github.com/vedanta/ui-cli", Documentation = "https://vedanta.github.io/ui-cli", Repository = "https://github.com/vedanta/ui-cli", Changelog = "https://github.com/vedanta/ui-cli/blob/main/CHANGELOG.md" }
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
ui = "ui_cli.main:app"
ui-mcp = "ui_mcp.server:main"

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "(?m)^(?P<version>\\d+\\.\\d+\\.\\d+)$"

[tool.hatch.build.targets.sdist]
include = [
    "/src/ui_cli",
    "/src/ui_mcp",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/VERSION",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ui_cli", "src/ui_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require real API)",
    "slow: marks tests as slow",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
